# skolaonline-rs

./: .gitignore  Cargo.toml  Dockerfile  flake.nix  rustfmt.toml
.github/workflows/: ci.yml  docker-publish.yml
skolaonline/: Cargo.toml
skolaonline-grade-guard/: Cargo.toml
skolaonline-grade-guard/src/: main.rs
skolaonline-ical/: Cargo.toml
skolaonline-ical-aas/: Cargo.toml
skolaonline-ical-aas/src/: calendar_response.rs  catcher.rs  endpoint.rs  error.rs  main.rs
skolaonline-ical-static/: Cargo.toml
skolaonline-ical-static/src/: main.rs
skolaonline-ical/src/: lib.rs
skolaonline-util/: Cargo.toml
skolaonline-util/src/: lib.rs
skolaonline/src/: abstractions.rs  client.rs  hash.rs  lib.rs  response.rs  result.rs  types.rs
skolaonline/src/models/: hodnoceni.rs  mod.rs  predmet.rs  rozvrh.rs  uzivatel_info.rs
sors-solapi/: Cargo.toml
sors-solapi/src/: client.rs  endpoint.rs  error.rs  lib.rs
sors-solapi/src/model/: min_app_version.rs  mod.rs  token_connect.rs  user_info.rs
