[package]
name = "skolaonline-grade-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
comfy-table = "6.1.4"
skolaonline = { version = "0.1.0", path = "../skolaonline" }
tokio = { version = "1.24.2", features = ["full"] }
