[package]
name = "skolaonline-ical-aas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.2"
axum-auth = "0.4.0"
base64 = "0.21.0"
chrono = "0.4.23"
skolaonline-ical = { version = "0.1.0", path = "../skolaonline-ical" }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
