[package]
name = "skolaonline-ical-static"
authors = ["Honbra <honbra@honbra.com>"]
description = "Uses skolaonline-ical to generate a calendar file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
skolaonline = { version = "0.1.0", path = "../skolaonline" }
skolaonline-ical = { version = "0.1.0", path = "../skolaonline-ical" }
tokio = { version = "1.21.2", features = ["full"] }
