[package]
name = "skolaonline-ical"
authors = ["Honbra <honbra@honbra.com>"]
description = "An iCal generator for Škola OnLine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.0"
icalendar = "0.13.3"
skolaonline = { version = "0.1.0", path = "../skolaonline" }
tokio = { version = "1.21.2", features = ["full"] }
