[package]
name = "skolaonline-ical"
authors = ["Honbra <honbra@honbra.com>"]
description = "An iCal generator for Škola OnLine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.1"
icalendar = "0.15.4"
skolaonline = { version = "0.1.0", path = "../skolaonline" }
thiserror = "1.0.40"
