[package]
name = "skolaonline"
authors = ["Honbra <honbra@honbra.com>"]
description = "A wrapper for the Škola OnLine API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
