[package]
name = "skolaonline"
authors = ["Honbra <honbra@honbra.com>"]
description = "A wrapper for the Škola OnLine API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
reqwest = { version = "0.11.16", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
