[package]
name = "sors-solapi"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json", "trust-dns"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
url = "2.4.1"
